syntax = "proto3";

// Package common defines commonly used types agnostic to the node role on the Sonr network.
package sonrio.common.v1;

option go_package = "github.com/sonr-io/sonr/thirdparty/types/common";

// Direction is the direction of a stream.
enum Direction {
  // Unspecified is the default value.
  DIRECTION_UNSPECIFIED = 0;

  // Incoming is the direction of an incoming stream.
  DIRECTION_INCOMING = 1;

  // Outgoing is the direction of an outgoing stream.
  DIRECTION_OUTGOING = 2;
}

// Standard MIME with Additional Extensions
message MIME {
  // Type of File
  Type type = 1;

  // Extension of File
  string subtype = 2;

  // Type/Subtype i.e. (image/jpeg)
  string value = 3;

  // File Content Type
  enum Type {
    // Other File Type - If cannot derive from Subtype
    TYPE_UNSPECIFIED = 0;

    // Sound, Audio Files
    TYPE_AUDIO = 1;

    // Document Files - PDF, Word, Excel, etc.
    TYPE_DOCUMENT = 2;

    // Image Files
    TYPE_IMAGE = 3;

    // Text Based Files
    TYPE_TEXT = 4;

    // Video Files
    TYPE_VIDEO = 5;

    // URL Links
    TYPE_URL = 6;

    // Crypto Files
    TYPE_CRYPTO = 7;
  }
}

// Basic Info Sent to Peers to Establish Connections
message Peer {
  string peer_id = 1;     // Peer ID of Libp2p Peer
  string did = 2;       // User Sonr Domain
  Status status = 3;      // Peer Status

  // Peers Active Status
  enum Status {
    STATUS_UNSPECIFIED = 0; // Offline - Not Online or Not a Full Node
    STATUS_ONLINE = 1;  // Online - Full Node Available
    STATUS_AWAY = 2;    // Away - Not Online, but has a full node
    STATUS_BUSY = 3;    // Busy - Online, but busy with Transfer
  }
}
